Upgrading to JDK 21 nb-javac