@@ -959,8 +959,7 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                         "         }\n" +
                         "     }\n" +
                         "}\n")
-                .sourceLevel("17")
-                .options("--enable-preview")
+                .sourceLevel("21")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToRuleSwitch())
                 .applyFix()
@@ -995,8 +994,7 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                         "         }\n" +
                         "     }\n" +
                         "}\n")
-                .sourceLevel("17")
-                .options("--enable-preview")
+                .sourceLevel("21")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToRuleSwitch())
                 .applyFix()
@@ -1032,8 +1030,7 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                         + "        }\n"
                         + "    }\n"
                         + "}")
-                .sourceLevel("17")
-                .options("--enable-preview")
+                .sourceLevel("21")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .findWarning("2:8-2:14:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
                 .applyFix()
@@ -1042,7 +1039,7 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                             + "class Test {\n"
                             + "    public String test(Object p, Object o1, Object o2) {\n"
                             + "        return (String) (switch (p) {\n"
-                            + "            case Integer i  when (i > 10) -> o1;\n"
+                            + "            case Integer i when (i > 10) -> o1;\n"
                             + "            default -> o2;\n"
                             + "        });\n"
                             + "    }\n"
